[package]
name = "amethyst-inspector"
version = "0.3.0"
edition = "2018"
description = "unity-like inspector for amethyst"
authors = ["Awpteamoose <awpteamoose@gmail.com>"]
license = "CC0-1.0"

[dependencies]
amethyst = "0.15"
amethyst-imgui = "0.6.1"
amethyst-inspector-derive = "0.2"
paste = "0.1"

